fix: list item alignment between ol and ul

--- a/src/styles/markdown-content.css
+++ b/src/styles/markdown-content.css
@@ -73,7 +73,7 @@
 }
 
 .markdown-content ul {
-  @apply list-disc list-outside ps-6.5 md:ps-8 space-y-1;
+  @apply list-disc list-outside ps-8 space-y-1;
 }
 
 .markdown-content ol {
